# My-OpenClaw-Center

./: .env.example  .eslintignore  .eslintrc.cjs  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT_SUMMARY.md  GEMINI.md  LICENSE  README.md  README.zh-CN.md  SKILL.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  项目说明文档.md
.claude/: settings.local.json
deploy/linux/: .env.production.example  README.zh-CN.md
docs/: PROJECT_SUMMARY.md
server/: .env  .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
server/data/: openclaw.db  test-acceptance.db
server/src/: app.ts  main.ts
server/tests/: acceptance.test.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/config/: runtime.ts
src/data/: mock.ts
src/lib/: i18n.ts  utils.ts
src/pages/: Agents.tsx  Channels.tsx  Chat.tsx  Dashboard.tsx  Login.tsx  Logs.tsx  Office.tsx  Settings.tsx  Skills.tsx  Tasks.tsx
src/services/: ChatService.ts  FileService.ts  GatewayDeviceAuth.ts  GatewayService.test.ts  GatewayService.ts  KanbanService.ts  LocalTokenUsageService.ts  PersistenceService.ts  SettingsService.ts  StudioService.ts  api-client.ts  realtime.ts
src/stores/: chatStore.ts  fileStore.ts  gatewayStore.ts  i18n.ts  kanbanStore.ts  settingsStore.ts  studioStore.ts  useAgentStore.ts  useAppStore.ts  useChatStore.ts  (+2 more)
studio/: .env.example  README.md  app.py  config.py  requirements-prod.txt
(+84 files in other folders)
