[package]
name = "openclaw-center"
version = "1.0.0"
description = "OpenClaw desktop client"
authors = ["OpenClaw Team"]
edition = "2021"

[lib]
name = "openclaw_center_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
